package com.atd.store.data.local.model

import androidx.room.Embedded
import androidx.room.Entity
import androidx.room.ForeignKey
import androidx.room.ForeignKey.Companion.CASCADE
import androidx.room.Index
import androidx.room.PrimaryKey
import com.atd.store.data.model.ApkFile
import com.atd.store.data.model.Manifest
import com.atd.store.data.model.Package
import com.atd.store.data.model.Permission
import com.atd.store.data.model.Platforms
import com.atd.store.data.model.SDKs
import com.atd.store.network.DataSize
import com.atd.store.sync.v2.model.ApkFileV2
import com.atd.store.sync.v2.model.FileV2
import com.atd.store.sync.v2.model.LocalizedString
import com.atd.store.sync.v2.model.PackageV2
import com.atd.store.sync.v2.model.PermissionV2
import com.atd.store.sync.v2.model.localizedValue

@Entity(
    tableName = "version",
    indices = [
        Index("appId"),
        Index(value = ["appId", "versionCode"], unique = true),
    ],
    foreignKeys = [
        ForeignKey(
            entity = AppEntity::class,
            childColumns = ["appId"],
            parentColumns = ["id"],
            onDelete = CASCADE,
        ),
    ],
)
data class VersionEntity(
    val added: Long,
    val whatsNew: LocalizedString,
    val versionName: String,
    val versionCode: Long,
    val maxSdkVersion: Int?,
    val minSdkVersion: Int,
    val targetSdkVersion: Int,
    @Embedded("apk_")
    val apk: ApkFileV2,
    @Embedded("src_")
    val src: FileV2?,
    val features: List<String>,
    val nativeCode: List<String>,
    val permissions: List<PermissionV2>,
    val permissionsSdk23: List<PermissionV2>,
    val appId: Int,
    @PrimaryKey(autoGenerate = true)
    val id: Int = 0,
)

fun PackageV2.versionEntities(appId: Int): List<VersionEntity> {
    return versions.map { (_, version) ->
        VersionEntity(
            added = version.added,
            whatsNew = version.whatsNew,
            versionName = version.manifest.versionName,
            versionCode = version.manifest.versionCode,
            maxSdkVersion = version.manifest.maxSdkVersion,
            minSdkVersion = version.manifest.usesSdk?.minSdkVersion ?: -1,
            targetSdkVersion = version.manifest.usesSdk?.targetSdkVersion ?: -1,
            apk = version.file,
            src = version.src,
            features = version.manifest.features.map { it.name },
            nativeCode = version.manifest.nativecode,
            permissions = version.manifest.usesPermission,
            permissionsSdk23 = version.manifest.usesPermissionSdk23,
            appId = appId,
        )
    }
}

fun List<VersionEntity>.toPackages(
    locale: String,
    installed: InstalledEntity?,
) = map { version ->
    Package(
        id = version.id.toLong(),
        installed = installed != null && installed.versionCode == version.versionCode,
        added = version.added,
        apk = ApkFile(
            name = version.apk.name,
            hash = version.apk.sha256,
            size = DataSize(version.apk.size),
        ),
        platforms = Platforms(version.nativeCode),
        features = version.features,
        manifest = Manifest(
            versionCode = version.versionCode,
            versionName = version.versionName,
            usesSDKs = SDKs(
                min = version.minSdkVersion,
                max = version.maxSdkVersion ?: -1,
                target = version.targetSdkVersion,
            ),
            signer = emptySet(), // This would need to be populated from somewhere
            permissions = version.permissions.map {
                Permission(
                    name = it.name,
                    sdKs = SDKs(
                        min = -1, // PermissionV2 doesn't have minSdkVersion
                        max = it.maxSdkVersion ?: -1,
                        target = -1,
                    ),
                )
            },
        ),
        whatsNew = version.whatsNew.localizedValue(locale) ?: "",
    )
}
